--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "author": "Fidel Ernesto <fidehlg89@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "node src/index.js"
+    "start": "node src/index.js",
+    "build": "babel src -d dist"
   },
   "dependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
